--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -8,10 +8,10 @@
     <div class="container container-wide v-bottom padding-v-60" style="top: 90%;">
         <img class="img-circle img-profile margin-b-20" data-sr="enter left"/>
 
-        <h1 class="text-lg margin-b-0" data-sr="enter left">{{ 'HOME.GREETING' | translate }} <strong>{{
+        <h1 class="text-lg margin-b-0" data-sr="enter left, move 50px">{{ 'HOME.GREETING' | translate }} <strong>{{
             'HOME.TITLE' | translate }}</strong>
         </h1>
-        <h5 class="margin-b-40" data-sr="wait 3s">{{ 'HOME.DESCRIPTION' | translate }}</h5>
+        <h5 class="margin-b-40" data-sr="wait 5s, enter left, move 50px">{{ 'HOME.DESCRIPTION' | translate }}</h5>
         <span><a href="#/about" class="btn btn-lg btn-primary" data-sr="vFactor 0.1, scale up 50%"><span>{{ 'ABOUT.ABOUT' | translate }}</span><i
                 class="ti-user"></i></a></span>
     </div>
