--- a/client/components/projects/projects.html
+++ b/client/components/projects/projects.html
@@ -10,25 +10,25 @@
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.INBITS" description="PROJECTS.INBITS.CAPTION"
                                url="/components/projects/portfolio/inbits.html"
-                               image="/images/gallery-inbits.png"></projects-item>
+                               image="/images/gallery-inbits.jpg"></projects-item>
             </div>
 
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.FRAUNHOFER" description="PROJECTS.FRAUNHOFER.CAPTION"
                                url="/components/projects/portfolio/fraunhofer.html"
-                               image="/images/gallery-fraunhofer.png"></projects-item>
+                               image="/images/gallery-fraunhofer.jpg"></projects-item>
             </div>
 
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.SYMBIO" description="PROJECTS.SYMBIO.CAPTION"
                                url="/components/projects/portfolio/symbio.html"
-                               image="/images/gallery-symbio.png"></projects-item>
+                               image="/images/gallery-symbio.jpg"></projects-item>
             </div>
 
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.COCAMA" description="PROJECTS.COCAMA.CAPTION"
                                url="/components/projects/portfolio/cocama.html"
-                               image="/images/gallery-cocama.png"></projects-item>
+                               image="/images/gallery-cocama.jpg"></projects-item>
             </div>
 
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
@@ -40,7 +40,7 @@
             <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.HOMEPAGE" description="PROJECTS.HOMEPAGE.CAPTION"
                                url="/components/projects/portfolio/homepage.html"
-                               image="/images/gallery-homepage.png"></projects-item>
+                               image="/images/gallery-homepage.jpg"></projects-item>
             </div>
 
         </div>
@@ -51,357 +51,4 @@
 
 </section>
 
-
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; Masonry Element &ndash;&gt;-->
-<!--<div class="masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">-->
-<!--<div class="gallery-item">-->
-<!--<div class="item-photo">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal"><img src="assets/img/projects/project-square02.jpg" alt="" /></a>-->
-<!--<div class="item-hover bg-dark dark">-->
-<!--<div class="item-hover-content">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal" class="icon icon-sm icon-hover icon-circle icon-primary"><i class="fa fa-link"></i></a>-->
-<!--<a href="#" class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; Masonry Element &ndash;&gt;-->
-<!--<div class="masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">-->
-<!--<div class="gallery-item">-->
-<!--<div class="item-photo">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal"><img src="assets/img/projects/project-vertical01.jpg" alt="" /></a>-->
-<!--<div class="item-hover bg-dark dark">-->
-<!--<div class="item-hover-content">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal" class="icon icon-sm icon-hover icon-circle icon-primary"><i class="fa fa-link"></i></a>-->
-<!--<a href="#" class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; Masonry Element &ndash;&gt;-->
-<!--<div class="masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">-->
-<!--<div class="gallery-item">-->
-<!--<div class="item-photo">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal"><img src="assets/img/projects/project-vertical02.jpg" alt="" /></a>-->
-<!--<div class="item-hover bg-dark dark">-->
-<!--<div class="item-hover-content">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal" class="icon icon-sm icon-hover icon-circle icon-primary"><i class="fa fa-link"></i></a>-->
-<!--<a href="#" class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; Masonry Element &ndash;&gt;-->
-<!--<div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">-->
-<!--<div class="gallery-item">-->
-<!--<div class="item-photo">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal"><img src="assets/img/projects/project-horizontal01.jpg" alt="" /></a>-->
-<!--<div class="item-hover bg-dark dark">-->
-<!--<div class="item-hover-content">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal" class="icon icon-sm icon-hover icon-circle icon-primary"><i class="fa fa-link"></i></a>-->
-<!--<a href="#" class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; Masonry Element &ndash;&gt;-->
-<!--<div class="masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">-->
-<!--<div class="gallery-item">-->
-<!--<div class="item-photo">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal"><img src="assets/img/projects/project-square03.jpg" alt="" /></a>-->
-<!--<div class="item-hover bg-dark dark">-->
-<!--<div class="item-hover-content">-->
-<!--<a href="projects/project-example-it.html" data-target="ajax-modal" class="icon icon-sm icon-hover icon-circle icon-primary"><i class="fa fa-link"></i></a>-->
-<!--<a href="#" class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="item-title">-->
-<!--<a href="projects/project-example-it.html" class="title">Corporate Identity Mockup</a>-->
-<!--<span class="caption text-muted">Mockups</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--</div>-->
-
-<!--</section>-->
-<!--&lt;!&ndash; Section - Portfolio / End &ndash;&gt;-->
-
-<!--<section class="section padding-60 top">-->
-<!--<div class="row">-->
-<!--<div class="col-sm-4 portfolio-item">-->
-<!--<a href="projects#inbits" class="portfolio-link" data-toggle="modal">-->
-<!--<div class="caption">-->
-<!--<div class="caption-content">-->
-<!--<i class="fa fa-search-plus fa-3x"></i>-->
-<!--</div>-->
-<!--</div>-->
-<!--<img src="images/inbits.png" class="img-responsive img-project" alt="">-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-4 portfolio-item">-->
-<!--<a href="projects#cocama" class="portfolio-link" data-toggle="modal">-->
-<!--<div class="caption">-->
-<!--<div class="caption-content">-->
-<!--<i class="fa fa-search-plus fa-3x"></i>-->
-<!--</div>-->
-<!--</div>-->
-<!--<img src="images/cocama.png" class="img-responsive img-project" alt="">-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-4 portfolio-item text-center">-->
-<!--<a href="projects#symbio" class="portfolio-link" data-toggle="modal">-->
-<!--<div class="caption">-->
-<!--<div class="caption-content">-->
-<!--<i class="fa fa-search-plus fa-3x"></i>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div><img src="images/symbio.png" class="img-responsive img-project" alt=""></div>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-4 portfolio-item text-center">-->
-<!--<a href="projects#coubr" class="portfolio-link" data-toggle="modal">-->
-<!--<div class="caption">-->
-<!--<div class="caption-content">-->
-<!--<i class="fa fa-search-plus fa-3x"></i>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div><img src="images/coubr.png" class="img-responsive img-project" alt=""></div>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-4 portfolio-item text-center">-->
-<!--<a href="projects#homepage" class="portfolio-link" data-toggle="modal">-->
-<!--<div class="caption">-->
-<!--<div class="caption-content">-->
-<!--<i class="fa fa-search-plus fa-3x"></i>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div><img src="images/sebastianhof.png" class="img-responsive img-project" alt=""></div>-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</section>-->
-
-<!--&lt;!&ndash; Portfolio Modals &ndash;&gt;-->
-<!--<div class="portfolio-modal modal fade" id="inbits" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--<div class="modal-content">-->
-<!--<div class="close-modal" data-dismiss="modal">-->
-<!--<div class="lr">-->
-<!--<div class="rl">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-8 col-lg-offset-2">-->
-<!--<div class="modal-body">-->
-<!--<h2>{{ 'PROJECTS.INBITS' | translate }}</h2>-->
-<!--<br />-->
-<!--<p class="text-justify">{{ 'PROJECTS.INBITS_TEXT' | translate }}</p>-->
-<!--<ul class="list-inline item-details">-->
-<!--<li>{{'PROJECTS.CLIENT' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.INBITS_CLIENT' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.DATE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.INBITS_DATE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.SERVICE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.INBITS_SERVICE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.TECHNOLOGIES' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.INBITS_TECHNOLOGIES' | translate }}</a></strong>-->
-<!--</li>-->
-<!--</ul>-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>-->
-<!--{{ 'PROJECTS.CLOSE' | translate }}-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="portfolio-modal modal fade" id="cocama" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--<div class="modal-content">-->
-<!--<div class="close-modal" data-dismiss="modal">-->
-<!--<div class="lr">-->
-<!--<div class="rl">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-8 col-lg-offset-2">-->
-<!--<div class="modal-body">-->
-<!--<h2>{{ 'PROJECTS.COCAMA' | translate }}</h2>-->
-<!--<br />-->
-<!--<p class="text-justify">{{ 'PROJECTS.COCAMA_TEXT' | translate }}</p>-->
-<!--<ul class="list-inline item-details">-->
-<!--<li>{{'PROJECTS.CLIENT' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COCAMA_CLIENT' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.DATE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COCAMA_DATE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.SERVICE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COCAMA_SERVICE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.TECHNOLOGIES' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COCAMA_TECHNOLOGIES' | translate }}</a></strong>-->
-<!--</li>-->
-<!--</ul>-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>-->
-<!--{{ 'PROJECTS.CLOSE' | translate }}-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="portfolio-modal modal fade" id="symbio" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--<div class="modal-content">-->
-<!--<div class="close-modal" data-dismiss="modal">-->
-<!--<div class="lr">-->
-<!--<div class="rl">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-8 col-lg-offset-2">-->
-<!--<div class="modal-body">-->
-<!--<h2>{{ 'PROJECTS.SYMBIO' | translate }}</h2>-->
-<!--<br />-->
-<!--<p class="text-justify">{{ 'PROJECTS.SYMBIO_TEXT' | translate }}</p>-->
-<!--<ul class="list-inline item-details">-->
-<!--<li>{{'PROJECTS.CLIENT' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.SYMBIO_CLIENT' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.DATE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.SYMBIO_DATE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.SERVICE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.SYMBIO_SERVICE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.TECHNOLOGIES' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.SYMBIO_TECHNOLOGIES' | translate }}</a></strong>-->
-<!--</li>-->
-<!--</ul>-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>-->
-<!--{{ 'PROJECTS.CLOSE' | translate }}-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="portfolio-modal modal fade" id="coubr" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--<div class="modal-content">-->
-<!--<div class="close-modal" data-dismiss="modal">-->
-<!--<div class="lr">-->
-<!--<div class="rl">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-8 col-lg-offset-2">-->
-<!--<div class="modal-body">-->
-<!--<h2>{{ 'PROJECTS.COUBR' | translate }}</h2>-->
-<!--<br />-->
-<!--<p class="text-justify">{{ 'PROJECTS.COUBR_TEXT' | translate }}</p>-->
-<!--<ul class="list-inline item-details">-->
-<!--<li>{{'PROJECTS.CLIENT' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COUBR_CLIENT' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.DATE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COUBR_DATE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.SERVICE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COUBR_SERVICE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.TECHNOLOGIES' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.COUBR_TECHNOLOGIES' | translate }}</a></strong>-->
-<!--</li>-->
-<!--</ul>-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal"><i-->
-<!--class="fa fa-times"></i>-->
-<!--{{ 'PROJECTS.CLOSE' | translate }}-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="portfolio-modal modal fade" id="homepage" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--<div class="modal-content">-->
-<!--<div class="close-modal" data-dismiss="modal">-->
-<!--<div class="lr">-->
-<!--<div class="rl">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-8 col-lg-offset-2">-->
-<!--<div class="modal-body">-->
-<!--<h2>{{ 'PROJECTS.HOMEPAGE' | translate }}</h2>-->
-<!--<br />-->
-<!--<p class="text-justify">{{ 'PROJECTS.HOMEPAGE_TEXT' | translate }}</p>-->
-<!--<ul class="list-inline item-details">-->
-<!--<li>{{'PROJECTS.CLIENT' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.HOMEPAGE_CLIENT' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.DATE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.HOMEPAGE_DATE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.SERVICE' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.HOMEPAGE_SERVICE' | translate }}</strong>-->
-<!--</li>-->
-<!--<li>{{'PROJECTS.TECHNOLOGIES' | translate}}:-->
-<!--<strong>{{ 'PROJECTS.HOMEPAGE_TECHNOLOGIES' | translate }}</a></strong>-->
-<!--</li>-->
-<!--</ul>-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>-->
-<!--{{ 'PROJECTS.CLOSE' | translate }}-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
+<view-loaded></view-loaded>
