Added imprint and privacy

--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -1,5 +1,5 @@
 <!-- Section - Contact -->
-<section id="contact" class="section fullheight padding-v-60">
+<section id="contact" class="section fullheight fullminheight padding-v-60">
 
     <!-- BG Map -->
     <div class="bg-image bg-contact animated visible infinite pulse zooming"></div>
@@ -16,7 +16,7 @@
                 {{ 'CONTACT.GERMANY' | translate }}
             </li>
             <li><i class="inline-icon icon-before-and-after text-primary fa fa-envelope"></i>
-                <a>{{ 'contact@sebastianhof.com' }}</a>
+                <span>{{ 'contact@sebastianhof.com' }}</span>
             </li>
             <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>{{ '+49 (0)151 22902263' }}
             </li>
@@ -97,3 +97,4 @@
     </div>
 </div>
 
+<view-loaded></view-loaded>
