--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -138,7 +138,12 @@
                     <ul class="list-unstyled">
                         <li>ISTQB Certified Tester Foundation</li>
                         <li>Microsoft Certified Professional</li>
-                        <li>Microsoft Certified Specialist</li>
+                        <li>edX: Introduction to Typescript</li>
+                        <li>edx: Introduction to Big Data with Apache Spark</li>
+                        <li>edx: Scalable Machine Learning</li>
+                        <li>Coursera: Machine Learning</li>
+                        <li>Coursera: Process Mining: Data science in Action</li>
+                        <li>Coursera: Introduction to Software Product Management</li>
                     </ul>
                 </div>
 
